adds hidden content

--- a/examples/blog/pages/index.mdx
+++ b/examples/blog/pages/index.mdx
@@ -1,14 +1,16 @@
 ---
 type: page
-title: About
-date: 2020-01-01
+title: Aboufdst
+date: 2021-03-19
 ---
 
-# Nextra
+## Hey, I'm Mikołaj.  
+I will finish this site at some point  
+I like: 
+- Wilderness and outdoor sports (hiking, wildcamping, bike-touring)
+- Swimming, freediving, underwater exploration
+- Reading books (weird fiction, speculative fiction, sci-fi, horror literature)
+___
+- Email mikolaj.torz@mailmasker.com
+- [Instagram](https://instagram.com/mptorz) / [Telegram](https://t.me/mptorz) / [LinkedIn](https://www.linkedin.com/in/mptt/)
 
-Hey there!
-
-![Image](../public/img.jpeg)
-
-This Markdown image is automatically converted into a
-[Next.js Image](https://nextjs.org/docs/api-reference/next/image).
